--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,6 @@
     <!--<style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">-->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="actionMenuTextColor">#FFFFFF</item>
     </style>
-
 </resources>
