--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
 
     <ImageButton
         android:id="@+id/btn_add_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/colorMain"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/button"
         android:onClick="btnAddNote"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_action_add" />
 
 </RelativeLayout>
