--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,22 +15,25 @@
         android:background="@color/colorMain">
     </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_below="@id/toolbar"/>
+        android:padding="10dp">
 
-    <ImageButton
-        android:id="@+id/btn_add_note"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/button"
-        android:onClick="btnAddNote"
-        android:src="@drawable/ic_action_add" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello World!" />
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/btn_add_note"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/button"
+            android:onClick="btnAddNote"
+            android:src="@drawable/ic_action_add"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
+
+    </RelativeLayout>
+</LinearLayout>
