--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--Add Action Buttons-->
+
+    <!--collapseActionView allows your SearchView to expand to take up the whole app bar
+     and collapse back down into a normal app bar item when not in use. -->
     <item
         android:id="@+id/search"
         android:title="@string/search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>/>
 
     <item android:id="@+id/edit"
         android:title="@string/edit"
