--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,9 +6,15 @@
 
     <include layout="@layout/toolbar"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp">
     <EditText
         android:id="@+id/edit_text_enter_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="New Note ... "/>
+
+    </LinearLayout>
 </LinearLayout>
