--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:minHeight="?attr/actionBarSize"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:titleTextColor="@android:color/white"
-    android:background="@color/colorMain">
+    android:layout_height="?attr/actionBarSize"
+    app:titleTextColor="@color/colorSecondaryText"
+    android:background="@color/colorMain"
+    android:elevation="4dp">
 </android.support.v7.widget.Toolbar>
