--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,5 +13,5 @@
 
     <item android:id="@+id/edit"
         android:title="@string/edit"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 </menu>
