Changed Launcher Icon and Palette Colors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,5 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/colorMain"/>
+        android:backgroundTint="@color/colorPrimary"/>
 </android.support.design.widget.CoordinatorLayout>
