Added RecyclerView widget and NoteAdapter class

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,8 @@
         android:id="@+id/search"
         android:title="@string/search"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>/>
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+    <!--collapseActionView-->
 
     <item android:id="@+id/edit"
         android:title="@string/edit"
