--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,14 +7,22 @@
     <include layout="@layout/toolbar"/>
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp">
-    <EditText
-        android:id="@+id/edit_text_enter_note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="New Note ... "/>
+
+        <EditText
+            android:id="@+id/et_note_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter title"/>
+
+        <EditText
+            android:id="@+id/et_note_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter text"/>
 
     </LinearLayout>
 </LinearLayout>
