--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/padding">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="1dp"
+        android:elevation="3dp"
+        android:layout_margin="5dp">
 
-    <TextView
-        android:id="@+id/tv_holder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAlignment="textStart"
-        android:textSize="@dimen/text_size"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/tv_note_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textSize="@dimen/note_title"
+            android:textStyle="bold|italic"
+            android:text="Note-Title"/>
+
+        <TextView
+            android:id="@+id/tv_note_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textSize="@dimen/note_text"
+            android:text="Note-Text"/>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
