--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding">
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="1dp"
+    android:elevation="3dp"
+    android:layout_margin="5dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        card_view:cardCornerRadius="1dp"
-        android:elevation="3dp"
-        android:layout_margin="5dp">
-
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_note_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/title"
             android:textAlignment="textStart"
-            android:textSize="@dimen/note_title"
             android:textStyle="bold|italic"
-            android:text="Note-Title"/>
+            android:text="Note-Title"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="5dp"/>
 
         <TextView
             android:id="@+id/tv_note_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
-            android:textSize="@dimen/note_text"
-            android:text="Note-Text"/>
-        </LinearLayout>
+            android:textSize="@dimen/text"
+            android:text="Note-Text"
+            android:layout_below="@id/tv_note_title"
+            android:layout_alignParentStart="true"
+            android:layout_margin="5dp"/>
+        </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+</android.support.v7.widget.CardView>
