--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="75dp"
     card_view:cardCornerRadius="1dp"
     android:elevation="3dp"
     android:layout_margin="5dp">
@@ -22,7 +21,8 @@
             android:textStyle="bold|italic"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/tv_note_text"
@@ -32,7 +32,8 @@
             android:textSize="@dimen/text"
             android:layout_below="@id/tv_note_title"
             android:layout_alignParentStart="true"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:textColor="@color/colorPrimaryDark"/>
         </RelativeLayout>
 
 </android.support.v7.widget.CardView>
