--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -4,36 +4,42 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
+    android:layout_height="100dp"
     card_view:cardCornerRadius="1dp"
     android:elevation="3dp"
-    android:layout_margin="5dp">
+    android:layout_margin="@dimen/card_margin">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/tv_note_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/title"
-            android:textAlignment="textStart"
-            android:textStyle="bold|italic"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="5dp"
-            android:textColor="@color/colorPrimaryDark"/>
 
-        <TextView
-            android:id="@+id/tv_note_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="textStart"
-            android:textSize="@dimen/text"
-            android:layout_below="@id/tv_note_title"
-            android:layout_alignParentStart="true"
-            android:layout_margin="5dp"
-            android:textColor="@color/colorPrimaryDark"/>
+            <TextView
+                android:id="@+id/tv_note_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text"
+                android:textAlignment="textStart"
+                android:textStyle="bold|italic"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:paddingTop="@dimen/padding"
+                android:paddingBottom="@dimen/card_padding"
+                android:paddingStart="@dimen/card_padding"
+                android:paddingEnd="@dimen/card_padding" />
+
+            <TextView
+                android:id="@+id/tv_note_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="textStart"
+                android:textSize="@dimen/text"
+                android:layout_below="@id/tv_note_title"
+                android:layout_alignParentStart="true"
+                android:paddingTop="@dimen/padding"
+                android:paddingBottom="@dimen/card_padding"
+                android:paddingStart="@dimen/card_padding"
+                android:paddingEnd="@dimen/card_padding" />
+
         </RelativeLayout>
 
 </android.support.v7.widget.CardView>
