--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding">16dp</dimen>
-    <dimen name="text">16sp</dimen>
-    <dimen name="title">12sp</dimen>
+    <dimen name="text">17sp</dimen>
+    <dimen name="card_margin">10dp</dimen>
+    <dimen name="card_padding">8dp</dimen>
 </resources>
