--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,7 +19,7 @@
             android:hint="Enter title"/>
 
         <EditText
-            android:id="@+id/et_note_text"
+            android:id="@+id/et_note_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter text"/>
