--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -28,7 +28,7 @@
                     android:paddingEnd="@dimen/card_padding" />
 
                 <TextView
-                    android:id="@+id/tv_note_text"
+                    android:id="@+id/tv_note_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="textStart"
