--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
         android:onClick="btnAddNote"
         android:src="@drawable/ic_action_add"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
         app:backgroundTint="@color/colorAccent"
         app:elevation="6dp"
         app:fabSize="normal"
