--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="text">17sp</dimen>
     <dimen name="card_margin">10dp</dimen>
     <dimen name="card_padding">8dp</dimen>
+    <dimen name="margin">16dp</dimen>
 </resources>
